updated npm package

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
             <h1>Web Boilerplate core features:</h1>
             <ul>
                 <li>ECMAScript 2015+ syntax support</li>
-                <li>PostCSS and Scss support</li>
+                <li>PostCSS and SCSS support</li>
                 <li>Minified production html, css, js</li>
                 <li>Live reloading with webpack dev server</li>
             </ul>
